@@ -698,13 +698,13 @@ Then use the <b>Load Atlas</b> function of TrekBuddy and open <tt>cr.tar</tt>/<t
 <h3><a name="TwoNav">Creating and using atlases with TwoNav
 &amp; CompeGPS Land/Air</a></h3>
 <p>To create atlases compatible with TwoNav software you have to
-select <b>TwoNav (RMAP)</b> as format in atlas format selection dialog that 
-appears when starting a new atlas (menu <b>Atlas</b> entry <b>New Atlas</b>). 
-Atlases created for TwoNav are 
-stored in a format called rmap. It's a binary format that holds the same
-map data stored at different resolutions - in order to make zooming in
-and out on low performance mobile devices fast and efficient. However,
-this causes some restrictions which have to be taken into account:</p>
+select <b>TwoNav (RMAP)</b> as format in atlas format selection dialog
+that appears when starting a new atlas (menu <b>Atlas</b> entry <b>New
+Atlas</b>). Atlases created for TwoNav are stored in a format called rmap.
+It's a binary format that holds the same map data stored at different
+resolutions - in order to make zooming in and out on low performance
+mobile devices fast and efficient. However, this causes some
+restrictions which have to be taken into account:</p>
 <ul>
 	<li>Each map within a layer has to have the same geographical
 	bounds.</li>
@@ -985,7 +985,14 @@ used from MOBAC. For details please see the <a
 	href="https://mobac.svn.sourceforge.net/svnroot/mobac/trunk/MOBAC/mapsources/Example%20custom%20tile%20zip%20source.xml">Example
 custom tile zip source.xml</a></p>
 
-<h3><a name="CustomMapPack">Custom MapPack</a></h3>
-<p>Only for Java developers - TODO</p>
+<h3><a name="CustomMapPack">Custom Map Pack</a></h3>
+<p>Developing a custom map pack requires at least basic Java skills.
+Therefore the description on how to develop a custom map pack is only
+part of the source code release of MOBAC. You can get the source code of
+MOBAC by using the latest <tt>src</tt> release available in the <a
+	href="http://sourceforge.net/projects/mobac/files/Mobile%20Atlas%20Creator/">files
+section at Sourceforge</a> or you can get it directly from the <a
+	href="http://sourceforge.net/scm/?type=svn&group_id=238075">Subversion
+code repository</a> using the latest <tt>trunk</tt> version.</p>
 </body>
 </html>
